--- a/Main.html
+++ b/Main.html
@@ -3,64 +3,65 @@
 <html lang="en">
 
 <head>
-    <title> Your Health </title>
+    <title> Healthy Mind </title>
     <meta charset="utf-8">
     <!-- set default viewport size for better scalability on mobile devices -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- link css style sheet -->
     <link rel="stylesheet" href="CSS/style.css">
-    <!-- link icon to use custom icon 
-    <link rel="icon" type="image/x-icon" href="IMG/icon.ico"> -->
+    <!-- link icon to use custom icon -->
+    <link rel="icon" type="image/x-icon" href="Images/WebIcon.ico"> 
 
 </head>
 
 <body>
-        <div id="header">
-            <header class="FirstNav">
-                <h1 class="pageTitle"> Mental Health Awareness </h1>
+    <div id="header">
+        <header class="FirstNav">
+            <h1 class="pageTitle"> Healthy Mind </h1>
 
 
-                <!-- Nav Bar in Banner Image with hover buttons -->
-                <div class="flex-container">
-                    <!-- nav buttons -->
-                    <div style="order: 1; flex-grow:1;" class="navbtn1" id="mainbtn"> <a href="Main.html"
-                            title="Return to Home"> <span> Home Page </span></a> </div>
+            <!-- Nav Bar in Banner Image with hover buttons -->
+            <div class="flex-container">
+                <!-- nav buttons -->
+                <div style="order: 1; flex-grow:1;" class="navbtn1" id="mainbtn"> <a href="Main.html"
+                        title="Return to Home"> <span> Home </span></a> </div>
 
-                    <div style="order: 2; flex-grow:1" class="navbtn1" id="helpbtn"> <a href="HTML/Help Hotlines.html"
-                            title="Help Hotlines"> <span> Recieve Help </span></a> </div>
+                <div style="order: 2; flex-grow:1" class="navbtn1" id="helpbtn"> <a href="HTML/Help Hotlines.html"
+                        title="Visit the Help Hotlines"> <span> Recieve Help </span></a> </div>
 
-                    <div style="order: 3; flex-grow:1" class="dropdown" id="dropbtn">
-                        <button class="dropbtn"> Learn More About </button>
-                        <div class="dropdown-content">
-                            <a href="HTML/Anxiety.html"> Anxiety </a>
-                            <a href="HTML/Depression.html"> Depression </a>
-                            <a href="HTML/Substance Abuse.html"> Substance Abuse</a>
-                            <a href="HTML/Sucide Prevention.html"> Sucide Prevention </a>
-                        </div>
-
-                    </div>
-
-                    <div style="order: 4; flex-grow:1" id="loginBtn"> <a href="HTML/Login.html" title="Login Page">
-                            <span> Login Page </span></a> </div>
-                    <div style="order: 5; flex-grow:1" id="registerBtn"> <a href="HTML/Registration.html"
-                            title="Registration Page"> <span> Registration Page
-                            </span></a> </div>
-
-                    <div style="order: 6; flex-grow:1" id="contactBtn"> <a href="HTML/Contact.html"
-                            title="Contact Page"> <span> Contact Us For Support </span></a> </div>
-                    <div class="navbtn1" id="searchbar" style="order: 7"> <input type="text" placeholder="Search..">
+                <div style="order: 3; flex-grow:1" class="dropdown" id="dropbtn">
+                    <button class="dropbtn"> Learn More About </button>
+                    <div class="dropdown-content">
+                        <a href="HTML/Anxiety.html"> Anxiety </a>
+                        <a href="HTML/Depression.html"> Depression </a>
+                        <a href="HTML/Substance Abuse.html"> Substance Abuse</a>
+                        <a href="HTML/Sucide Prevention.html"> Sucide Prevention </a>
                     </div>
 
                 </div>
 
+                <div style="order: 4; flex-grow:1" id="loginBtn"> <a href="HTML/Login.html" title="Visit the Login Page">
+                        <span> Login </span></a> </div>
+                <div style="order: 5; flex-grow:1" id="registerBtn"> <a href="HTML/Registration.html"
+                        title="Visit the Registration Page"> <span> Registration
+                        </span></a> </div>
 
-            </header>
+                <div style="order: 6; flex-grow:1" id="contactBtn"> <a href="HTML/Contact.html" title="Visit the Contact Page">
+                        <span> Contact Us For Support </span></a> </div>
+                <div class="navbtn1" id="searchbar" style="order: 7"> <input type="text" placeholder="Search..">
+                </div>
 
-            <br>
+            </div>
 
-        </div>
 
-    <div id="home_banner"></div>
+        </header>
+
+        <br>
+
+    </div>
+
+        <div id="home_banner"> </div>
+        <div class="hooktext"> <i> You're not Alone </i></div>
 
     <main>
         <br>
@@ -110,7 +111,8 @@
             <!-- class to contain the entire thing -->
             <!-- Clickable Image - Links to another page -->
             <div class="image_container">
-                <img src="Images/home_5.png" alt="Mental Health Anxiety Disorder" title="Mental Health Anxiety Disorder" class="image_btn">
+                <img src="Images/home_5.png" alt="Mental Health Anxiety Disorder" title="Mental Health Anxiety Disorder"
+                    class="image_btn">
                 <!-- Button -->
                 <div class="middle">
                     <!-- button text -->
@@ -120,13 +122,15 @@
                 </div>
             </div>
             <h2> A Growing Trend of Concern </h2>
-            <p> Mental Health is the leading cause of issues in adolsecents. In which anxiety disorders lead the pack of mental health issues. </p>
+            <p> Mental Health is the leading cause of issues in adolsecents. In which anxiety disorders lead the pack of
+                mental health issues. </p>
 
 
             <!-- class to contain the entire thing -->
             <!-- Clickable Image - Links to another page -->
             <div class="image_container">
-                <img src="Images/home_6.jpg" alt="Mental Health Hotlines" title="Mental Health Hotlines" class="image_btn">
+                <img src="Images/home_6.jpg" alt="Mental Health Hotlines" title="Mental Health Hotlines"
+                    class="image_btn">
                 <!-- Button -->
                 <div class="middle">
                     <!-- button text -->
@@ -138,6 +142,11 @@
             <h2> The battle of a healthy mind </h2>
             <p> Many services, websites are opened to all to ensure that everyone is mentally healthy. </p>
         </div>
+
+        <div class="to_top">
+            <a href="#header"> <span> Back to top </span> </a>
+        </div>
+
     </main>
 
     <!-- Footer Containing Name of Contributor-->
@@ -151,9 +160,7 @@
 
 
     <!-- To top button -->
-    <div class="to_top">
-        <a href="#header"> <span> Back to top </span> </a>
-    </div>
+
 </body>
 
 </html>
