--- a/HTML/Substance Abuse.html
+++ b/HTML/Substance Abuse.html
@@ -7,30 +7,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
-    <!-- <link rel="icon" type="image/x-icon" href="../IMG/icon.ico"> -->
+    <link rel="icon" type="image/x-icon" href="Images/WebIcon.ico"> 
 </head>
 
 <body>
-    <!-- Navigation Bar -->
-    <!--
-    <header>
-        <div id="flex-container">
-            <div> <a href="../Main.html" title="Return to Home"> Home </a></div>
-            <div> <a href="Contact.html" title="Return to Contact Page"> Our Contacts </a> </div>
-        </div>
-    </header>
--->
+
 <div id="header">
     <header class="FirstNav">
-        <h1 class="pageTitle"> Mental Health Awareness </h1>
+        <h1 class="pageTitle"> Healthy Mind </h1>
 
 
         <!-- Nav Bar in Banner Image with hover buttons -->
         <div class="flex-container">
             <!-- nav buttons -->
-            <div  style="order: 1; flex-grow:1;" class="navbtn1" id="mainbtn"> <a href="../Main.html" title="Return to Home"> <span> Home Page </span></a> </div> 
+            <div  style="order: 1; flex-grow:1;" class="navbtn1" id="mainbtn"> <a href="../Main.html" title="Return to Home"> <span> Home </span></a> </div> 
             
-            <div  style="order: 2; flex-grow:1" class="navbtn1" id="helpbtn">  <a href="Help Hotlines.html" title="Help Hotlines"> <span> Recieve Help </span></a> </div>    
+            <div  style="order: 2; flex-grow:1" class="navbtn1" id="helpbtn">  <a href="Help Hotlines.html" title="Visit the Help Hotlines"> <span> Recieve Help </span></a> </div>    
 
             <div style="order: 3; flex-grow:1" class="dropdown" id="dropbtn">
                 <button class="dropbtn"> Learn More About </button>
@@ -43,11 +35,11 @@
 
             </div>
 
-            <div  style="order: 4; flex-grow:1" id="loginBtn"> <a href="Login.html" title="Login Page"> <span> Login Page </span></a> </div> 
-            <div  style="order: 5; flex-grow:1" id="registerBtn" > <a href="Registration.html" title="Registration Page"> <span> Registration Page
+            <div  style="order: 4; flex-grow:1" id="loginBtn"> <a href="Login.html" title="Visit the Login Page"> <span> Login </span></a> </div> 
+            <div  style="order: 5; flex-grow:1" id="registerBtn" > <a href="Registration.html" title="Visit the Registration Page"> <span> Registration
             </span></a>  </div>
 
-            <div style="order: 6; flex-grow:1" id="contactBtn">  <a href="Contact.html" title="Contact Page"> <span> Contact Us For Support </span></a> </div>  
+            <div style="order: 6; flex-grow:1" id="contactBtn">  <a href="Contact.html" title="Visit the Contact Page"> <span> Contact Us For Support </span></a> </div>  
             <div class="navbtn1" id="searchbar" style="order: 7"> <input type="text" placeholder="Search.." > </div>
             
         </div>
@@ -67,7 +59,7 @@
                 <h1 style="border-bottom: 1px solid black"> Substance Abuse </h1>
                 <ul>
                     <li class="TOCcontent"> <a href="#pageHeadline"> What is Substance Abuse? </a> </li>
-                    <li class="TOCcontent"> <a href="#disorderSymptomps"> Types of Substance Abuses </a> </li>
+                    <li class="TOCcontent"> <a href="#disorderTypes"> Types of Substance Abuses </a> </li>
                     <li class="TOCcontent"> <a href="#disorderCauses"> Causes of Substance Abuse </a> </li>
                     <li class="TOCcontent"> <a href="#disorderTreatments"> Treatments for Substance Abuse </a> </li>
                     <li class="TOCcontent"> <a href="#disorderPreventions"> Preventions for Substance Abuse </a> </li> 
@@ -94,27 +86,27 @@
             <img src="../Images/rsz_Substance 2.jpg">
 
             <!-- Content under a sub-header -->
-            <h2 id="disorderSymptoms"> Types of Substance Abuse </h2>
+            <h2 id="disorderTypes"> Types of Substance Abuse </h2>
             <p> People of any age, gender, race can all misuse substances
             </p>
-            <h3> How much of an intake is considered as substance abuse?. It is to be noted that body mass and genetics also play a role
+            <h3 class="nested_list"> How much of an intake is considered as substance abuse?. It is to be noted that body mass and genetics also play a role
                 in determining the limit of each substances or drugs, hence you should go for a medical checkup if you wish know what the limit
                 is for you: </h3>
             <ul>
                 <li> Alcohol </li>
                 <ul>
-                    <li> Men (on average*) </li>
-                    <p> 4++ drinks in a day or 14++ drinks in a week is considered as substance abuse. </p>
-                    <li> Women (on average*)</li>
-                    <p> 3++ drinks in a day or 7++ drinks in a week is considered as substance abuse. </p>
+                    <li class="nested_list"> Men (on average*) </li>
+                    <p class="nested_list"> 4++ drinks in a day or 14++ drinks in a week is considered as substance abuse. </p>
+                    <li class="nested_list"> Women (on average*)</li>
+                    <p class="nested_list"> 3++ drinks in a day or 7++ drinks in a week is considered as substance abuse. </p>
                 </ul>
 
                 <li> Marijuana </li>
-                <p> No more than 40 mg of marijuana, regardless of a person's sex or age. </p>
+                <p class="nested_list"> No more than 40 mg of marijuana, regardless of a person's sex or age. </p>
                 <li> Heroin </li>
-                <p> No more than approximately 200mg, regardless of a person's sex or age.</p>
-                <li> etc </li>
-                <p> Please refer to the FDA (US Food & Drugs Administration) guidelines for more info. </p>
+                <p class="nested_list"> No more than approximately 200mg, regardless of a person's sex or age.</p>
+                <li> Other Drugs </li>
+                <p class="nested_list"> Please refer to the FDA (US Food & Drugs Administration) guidelines for more info. </p>
             </ul>
 
             <br>
