--- a/HTML/Help Hotlines.html
+++ b/HTML/Help Hotlines.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
-    <link rel="icon" type="image/x-icon" href="Images/WebIcon.ico"> 
+    <link rel="icon" type="image/x-icon" href="../Images/WebIcon.ico"> 
 </head>
 
 <body>
