--- a/HTML/Login.html
+++ b/HTML/Login.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../CSS/style.css">
     <!-- link icon to use custom icon -->
-    <link rel="icon" type="image/x-icon" href="Images/WebIcon.ico"> 
+    <link rel="icon" type="image/x-icon" href="../Images/WebIcon.ico"> 
 </head>
 
 <body>
